<resources>
    <string name="app_name">PerseLite Demo</string>
    <string name="detect_label">Detect</string>
    <string name="compare_label">Compare</string>
    <string name="choose_image_label">Choose Image</string>
    <string name="upload_image_label">Upload Image</string>
    <string name="detected_faces_label">Detected faces</string>
    <string name="image_metrics_label">Image Metrics</string>
    <string name="underexpose_label">Underexpose</string>
    <string name="overexpose_label">Overexpose</string>
    <string name="sharpness_label">Sharpness</string>
    <string name="get_image_2_label">Get Image 2</string>
    <string name="get_image_1_label">Get Image 1</string>
    <string name="upload_images_label">Upload Images</string>
    <string name="similarity_label">Similarity</string>
    <string name="time_taken_label">Time taken</string>
    <string name="liveness_score_label">Liveness score</string>
    <string name="bounding_box_label">Bounding box</string>
    <string name="confidence_label">Confidence</string>
    <string name="right_eye_label">Right eye</string>
    <string name="left_eye_label">Left eye</string>
    <string name="right_eye_open_probability">Right eye open: %1$s%%</string>
    <string name="left_eye_open_probability">Left eye open: %1$s%%</string>
    <string name="smiling_probability">Smiling: %1$s%%</string>
    <string name="image_underexpose_probability">Image underexpose: %1$s%%</string>
    <string name="image_sharpness_probability">Image Blurred: %1$s%%</string>
    <string name="face_underexpose_probability">Face underexpose: %1$s%%</string>
    <string name="face_sharpness_probability">Face Blurred: %1$s%%</string>
    <string name="right_eye_open">Right eye open: </string>
    <string name="left_eye_open">Left eye open: </string>
    <string name="smiling">Smiling: </string>
    <string name="image_underexpose">Image underexpose:</string>
    <string name="image_sharpness">Image sharpness: </string>
    <string name="face_underexpose">Face underexpose: </string>
    <string name="face_sharpness">Face sharpness: </string>
    <string name="nose_label">Nose</string>
    <string name="mouth_right_label">Mouth right</string>
    <string name="mouth_left_label">Mouth left</string>
    <string name="horizontal_movement_probability">Horizontal Movement: %1$s</string>
    <string name="vertical_movement_probability">Vertical Movement: %1$s</string>
    <string name="tilt_movement_probability">Tilt Movement: %1$s</string>
    <string name="horizontal_movement">Horizontal Movement:</string>
    <string name="vertical_movement">Vertical Movement:</string>
    <string name="tilt_movement">Tilt Movement:</string>
    <string name="upload_label">Upload</string>
    <string name="camera_label">Camera</string>
</resources>