<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ai.cyberlabs.yoonit.camera.CameraView
        android:id="@+id/camera_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/left_eye_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_neutral"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:text="@string/left_eye_open"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/right_eye_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_neutral"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/left_eye_tv"
        android:text="@string/right_eye_open" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/smiling_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_neutral"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/right_eye_tv"
        android:text="@string/smiling" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/face_underexposure_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_neutral"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smiling_tv"
        android:text="@string/face_underexposure" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/face_sharpness_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_neutral"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/face_underexposure_tv"
        android:text="@string/face_sharpness" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/image_underexposure_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_neutral"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/face_sharpness_tv"
        android:text="@string/image_underexposure" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/image_sharpness_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_neutral"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_underexposure_tv"
        android:text="@string/image_sharpness" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/horizontal_movement_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_sharpness_tv"
        tools:text="Horizontal Movement: Frontal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/vertical_movement_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_movement_tv"
        tools:text="Vertical Movement: Frontal" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tilt_movement_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vertical_movement_tv"
        tools:text="Tilt Movement: Frontal" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_preview"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>